test: add final unit tests for Filter, Order, and Address services